@@ -206,14 +206,27 @@ void FindSubtitlesWindow::retranslateStrings() {
 	QString current_language = language_filter->itemData(language_filter->currentIndex()).toString();
 	language_filter->clear();
 
-	QMap<QString,QString> l = Languages::list();
-	QMapIterator<QString, QString> i(l);
-	while (i.hasNext()) {
-		i.next();
-		language_filter->addItem( i.value() + " (" + i.key() + ")", i.key() );
+	QMap<QString,QString> l1 = Languages::most_used_list();
+	QMapIterator<QString, QString> i1(l1);
+	while (i1.hasNext()) {
+		i1.next();
+		language_filter->addItem( i1.value() + " (" + i1.key() + ")", i1.key() );
 	}
+	language_filter->addItem( tr("Portuguese - Brasil") + " (pb)", "pb");
 	language_filter->model()->sort(0);
+	language_filter->insertSeparator(language_filter->count());
+
+	QMap<QString,QString> l2 = Languages::list();
+	QMapIterator<QString, QString> i2(l2);
+	while (i2.hasNext()) {
+		i2.next();
+		if (language_filter->findData(i2.key()) == -1) {
+			language_filter->addItem( i2.value() + " (" + i2.key() + ")", i2.key() );
+		}
+	}
+	//language_filter->model()->sort(0);
 	language_filter->insertItem( 0, tr("All"), "*" );
+	language_filter->insertSeparator(1);
 	//language_filter->setCurrentIndex(language_index);
 	language_filter->setCurrentIndex(language_filter->findData(current_language));
 
